# teaclassic

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
assets/maps/: demo.tcscene  test.tcscene
cmake/: comm_macros.cmake  common.cmake  glew.cmake
launcher/: Makefile  main.c  tc.rc
scripts/: dump_api.py  pong.py  test_pickle.py  test_stress.py
scripts/common/: button_style_ctx.py  disappearing_text_task.py
scripts/development/: libraries.json
scripts/editor/: constants.py  globals.py  main.py  map.py  mouse_events.py  scene.py
scripts/io_scene_pfobj/: __init__.py  export_pfobj.py
scripts/rts/: __init__.py  main.py
shaders/fragment/: colored-per-vert.glsl  colored.glsl  minimap.glsl  passthrough.glsl  statusbar.glsl  terrain-shadowed.glsl  terrain.glsl  textured-phong-shadowed-batched.glsl  textured-phong-shadowed.glsl  textured-phong.glsl  textured.glsl  tile-outline.glsl  ui.glsl  water.glsl
shaders/geometry/: normals.glsl
shaders/vertex/: basic.glsl  colored-instanced.glsl  colored.glsl  depth-batched.glsl  depth.glsl  skinned-depth-batched.glsl  skinned-depth.glsl  skinned-shadowed-batched.glsl  skinned-shadowed.glsl  skinned.glsl  static-shadowed-batched.glsl  static-shadowed.glsl  static.glsl  statusbar.glsl  terrain-shadowed.glsl  terrain.glsl  ui.glsl  water.glsl
src/: asset_load.c  asset_load.h  cam_control.c  cam_control.h  camera.c  camera.h  config.h  cursor.c  cursor.h  entity.c  entity.h  event.c  event.h  main.c  main.h  perf.c  perf.h  scene.c  scene.h  sched.c  sched.h  session.c  session.h  settings.c  settings.h  task.c  task.h  tc_math.c  tc_math.h  ui.c  ui.h
src/anim/: anim.c  anim_asset_load.c  anim_ctx.h  anim_data.h  anim_private.h
src/audio/: al_assert.h  al_audio.c  al_effect.c  al_effect.h  al_private.h
src/game/: builder.c  builder.h  building.c  building.h  clearpath.c  clearpath.h  combat.c  combat.h  faction.h  fog_of_war.c  fog_of_war.h  game.c  game_private.h  gamestate.h  harvester.c  harvester.h  movement.c  movement.h  position.c  position.h  region.c  region.h  resource.c  resource.h  selection.c  selection.h  storage_site.c  storage_site.h  timer_events.c  timer_events.h
src/lib/: SDL_vec_rwops.c  attr.c  debug_malloc.c  nk_file_browser.c  nuklear.c  stalloc.c  string_intern.c  tc_malloc.c  tc_string.c
src/map/: map.c  map_asset_load.c  map_private.h  minimap.c  raycast.c  tcchunk.h  tile.c
src/navigation/: a_star.c  a_star.h  field.c  field.h  fieldcache.c  fieldcache.h  nav.c  nav_data.h  nav_private.h
src/phys/: collision.c  projectile.c
src/render/: gl_assert.h  gl_batch.c  gl_batch.h  gl_material.h  gl_mesh.h  gl_minimap.c  gl_perf.h  gl_render.c  gl_render.h  gl_ringbuffer.c  gl_ringbuffer.h  gl_shader.c  gl_shader.h  gl_shadows.c  gl_state.c  gl_state.h  gl_statusbar.c  gl_terrain.c  gl_texture.c  gl_texture.h  gl_tile.c  gl_ui.c  gl_vertex.h  (+4 more)
(+150 files in other folders)
